<resources>
    <string name="app_name">Court Counter</string>
    <string name="team_a">Team A</string>
    <string name="team_b">Team B</string>
    <string name="add_3_points">+3 Points</string>
    <string name="add_2_points">+2 Points</string>
    <string name="free_throw">Free throw</string>
    <string name="reset">Reset</string>
    <string name="undo">Undo</string>
</resources>
