<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.courtcounter.MainActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="1.14">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/team_a"
                android:gravity="center"
                android:padding="4dp"
                android:textSize="14sp"
                android:textColor="#616161"
                android:fontFamily="sans-serif-medium"
                android:layout_marginTop="16dp" />

            <TextView
                android:id="@+id/team_a_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="4dp"
                android:textSize="56sp"
                android:textColor="#000000"
                android:fontFamily="sans-serif-light"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="24dp" />

            <Button
                android:id="@+id/a_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/add_3_points"
                android:onClick="doPressBottom"
                android:layout_marginBottom="4dp" />

            <Button
                android:id="@+id/a_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/add_2_points"
                android:onClick="doPressBottom"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/free_throw"
                android:onClick="doPressBottom"
                android:id="@+id/a_1"
                android:layout_marginTop="4dp" />
        </LinearLayout>

        <View
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:background="@android:color/darker_gray">
        </View>


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_marginRight="24dp"
            android:layout_marginLeft="24dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/team_b"
                android:gravity="center"
                android:padding="4dp"
                android:fontFamily="sans-serif-medium"
                android:textSize="14sp"
                android:textColor="#616161"
                android:layout_marginTop="16dp" />

            <TextView
                android:id="@+id/team_b_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="4dp"
                android:textSize="56sp"
                android:textColor="#000000"
                android:fontFamily="sans-serif-light"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="24dp" />

            <Button
                android:id="@+id/b_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/add_3_points"
                android:onClick="doPressBottom"
                android:layout_marginBottom="4dp" />

            <Button
                android:id="@+id/b_2"
                android:text="@string/add_2_points"
                android:onClick="doPressBottom"
                style="@style/Bottoms" />

            <Button
                android:id="@+id/b_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/free_throw"
                android:onClick="doPressBottom"
                android:layout_marginTop="4dp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="0.43">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reset"
                android:id="@+id/button2"
                android:onClick="reset"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="32dp" />

            <Button
                android:text="@string/undo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/button2"
                android:layout_centerHorizontal="true"
                android:id="@+id/button"
                android:onClick="undo" />
        </RelativeLayout>

    </LinearLayout>

</LinearLayout>
